Add SwaggerForOcelot for the gateway

--- a/ApiGateway/ApiGateway.csproj
+++ b/ApiGateway/ApiGateway.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MMLib.SwaggerForOcelot" Version="2.6.0" />
     <PackageReference Include="Ocelot" Version="16.0.1" />
   </ItemGroup>
 
